test/tooltest/effectgen/invalid/14_unmatched_brackets_in_attr.params
/*
 * Invalid: Unmatched brackets in attribute
 */

struct [[ge::params(type=TEST_UNMATCHED_BRACKETS, name="TestBrackets", values=[1, 2, 3)]] TestUnmatchedBracketsParams {
    float value1;
    int value2;
};
